k8s/database.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eds-database
  labels:
    name: eds
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      role: database
  template:
    metadata:
      labels:
        role: database
    spec:
      containers:
        - name: postgres
          image: postgis/postgis:15-3.3
          ports:
            - containerPort: 5432
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
              ephemeral-storage: 256Mi
            requests:
              cpu: 20m
              memory: 256Mi
