k8s/server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eds-server-deployment
  labels:
    name: eds
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      role: dispatcher-backend
  template:
    metadata:
      labels:
        role: dispatcher-backend
    spec:
      containers:
        - name: java-server
          image: thangvip5432/eds:latest
          # we already config env in our spring .yml, lol its not really ideal
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
              ephemeral-storage: 512Mi
            requests:
              cpu: 80m
              memory: 256Mi
