k8s/dispatcher-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dispatcher-service
  labels:
    name: eds
spec:
  selector:
    role: dispatcher-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8082
  type: ClusterIP
